--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -23,7 +23,7 @@
 
 [[constraint]]
   name = "github.com/99designs/gqlgen"
-  version = "0.6.0"
+  branch = "master"
 
 [[constraint]]
   branch = "master"
