--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -20,7 +20,7 @@
 #  name = "github.com/x/y"
 #  version = "2.4.0"
 
-metadata.heroku["adindopustaka"]
+metadata.heroku["github.com/kautsarady/adindopustaka"]
 
 [[constraint]]
   branch = "master"
