--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -20,7 +20,8 @@
 #  name = "github.com/x/y"
 #  version = "2.4.0"
 
-metadata.heroku["github.com/kautsarady/adindopustaka"]
+[metadata.heroku]
+  root-package = "github.com/kautsarady/adindopustaka"
 
 [[constraint]]
   branch = "master"
